force-app/main/default/objects/IIRIS_Auth_Provider__mdt/IIRIS_Auth_Provider__mdt.object-meta.xml
<CustomObject>
    <description>IM Customer Center - IIRIS third party authentication provider in community portal</description>
    <label>IIRIS Auth Provider</label>
    <pluralLabel>IIRIS Auth Providers</pluralLabel>
</CustomObject>