force-app/main/default/objects/IIRIS_Auth_Provider__mdt/fields/appid__c.field-meta.xml
<CustomField>
    <fullName>appid__c</fullName>
    <label>appid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>