force-app/main/default/objects/IIRIS_Auth_Provider__mdt/fields/Authorization_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Endpoint__c</fullName>
    <label>Authorization Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>