force-app/main/default/objects/IIRIS_Auth_Provider__mdt/fields/Custom_Login_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Custom_Login_Endpoint__c</fullName>
    <label>Custom Login Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>