force-app/main/default/objects/IIRIS_Auth_Provider__mdt/fields/Login_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Login_Endpoint__c</fullName>
    <label>Login Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>