force-app/main/default/objects/IIRIS_Auth_Provider__mdt/fields/Logout_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Logout_Endpoint__c</fullName>
    <label>Logout Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>