force-app/main/default/objects/IIRIS_Auth_Provider__mdt/fields/Redirect_Url__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Url__c</fullName>
    <label>Redirect Url</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>