force-app/main/default/objects/IIRIS_Auth_Provider__mdt/fields/UserInfo_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>UserInfo_Endpoint__c</fullName>
    <label>UserInfo Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>